<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/GAINSBORO"
    android:orientation="vertical"
    tools:context="com.createdapp.james.powertoweightconverter.MainPage">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/power"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/power"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/powerChoice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/nothing_selected"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/powerInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:hint="@string/EnterPower"
            android:inputType="number"
            android:text=""
            android:textColor="#000000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/weight"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/weightChoice"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/nothing_selected"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/weightInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:hint="@string/enterWeight"
            android:inputType="number"
            android:text=""
            android:textColor="#000000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ansDisplay"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:hint="@string/base_result"
            android:text=""
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textColor="#000000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/ansUnit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:hint="@string/power_weight_unit"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#000000" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/calculateButton"
            android:layout_width="240dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:background="@color/LIGHTSLATEGRAY"
            android:onClick="calculateButtonHandler"
            android:text="@string/calculate" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clearButton"
            android:layout_width="240dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:background="@color/LIGHTSLATEGRAY"
            android:onClick="clearButtonHandler"
            android:text="@string/clear" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/settingButton"
            android:layout_width="240dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:background="@color/LIGHTSLATEGRAY"
            android:onClick="settingsButtonHandler"
            android:text="@string/change_units" />

    </RelativeLayout>

</LinearLayout>